@@ -6,7 +6,11 @@ update-manager (1:0.90.0) intrepid; urgency=low
     - do not crash if the tarfile can not be read (LP: #203504)
   * fix a bunch of spelling mistakes (LP: #213040), thanks
     to Peter Cordes
-
+  * AutoUpgradeTester/automatic-upgrade-testing:
+    - add "--additional-pkgs" argument that can be used to install
+      the given packages (seperated with ",") into the VM before 
+      the upgrade is performed
+  
  --
 
 update-manager (1:0.87.25) hardy-proposed; urgency=low
